# snake

./: Cargo.toml  Rocket.toml  snake.tps
game/assets/: sprites.json
game/js/: food.js  game.js  menu.js  score.js  size.js  snake.js  util.js
migrations/2018-10-03-123358_create_scores/: up.sql
migrations/2018-10-04-033811_delete_greetings/: down.sql  up.sql
migrations/2019-03-05-052258_add_name/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
static/: style.css
templates/: index.html.hbs
