[package]
name = "snake-web"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
diesel = { version = "<= 1.2", features = ["sqlite", "r2d2"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
