[package]
name = "snake"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
diesel = { version = "= 1.3.3", features = ["sqlite", "r2d2"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
